20130704 added timestamp copy to exiftime
20071215 version: exiftags 1.01
20071215 fixed to compile on HP-UX
20071215 added Canon EOS-5D custom function support (thanks: Albert Max Lai)
20071215 custom timestamp prefs in exiftime listing (thanks: Stuart Scharf)
20071215 suppress warnings on invalid user comments
20071214 allow output of invalid tags in debug
20071214 fixed looping from recursive IFD ref, resolves CVE-2007-6356
         (thanks: Christian Schmid; Meder Kydyraliev, Google Security Team)
20071214 fixed handling of field offset overflow, resolves CVE-2007-6354 &
         CVE-2007-6355 (thanks: Meder Kydyraliev, Google Security Team)

20050126 version: exiftags 1.00
20050107 added Canon tags, minor tweaks (thanks: Henrik Levkowetz)
20050104 fixed handling of short ASCII strings
20041228 added Panasonic tags (thanks: Lee Kindness)
20041227 enhanced Nikon maker note support for newer cameras
20041223 internal code cleanup to allow separate maker TIFF info
20041220 added new Canon shooting modes (thanks: Henrik Levkowetz)
20041217 fixed exiftime crash on missing tags (thanks: Nathan Treadway)
20041106 fixed looping from recursive Canon IFD ref (thanks: Mathieu Vanasse)
20041011 sanitize ASCII tags to handle corrupt maker notes
20041010 added Panasonic values, tags (thanks: Laurent Monin)
20041009 image number support for Canon EOS-20D (thanks: Per Kristian Hove)
20041009 added Canon EOS-20D custom function support
20040915 added Sigma maker note support
20040821 added Canon tag values, calculate EV's (thanks: Bradley Bailey)
20040820 fixed flash tag processing to catch all possible values
20040820 fixed spelling for Minolta values (thanks: Martin Pool)

20040506 version: exiftags 0.99.1
20040506 fixed exiftime install oversight
20040504 added Canon camera actuations (thanks: Stan Jirman)

20040430 version: exiftags 0.99
20040420 added Panasonic maker note support (thanks: Tom Hughes)
20040410 improved error messages in exifcom