@@ -129,7 +129,7 @@ In the absence of an Image Created tag, first Image Generated then Image
 Digitized are used.  Alternatively, the
 .B -t
 flag may be used to specify the timestamp preference for ordering.  If no
-date and time tags are present, the OS's epoch is used.  This flag
+date and time tags are present, the file's modified time is used.  This flag
 overrides all others but the
 .B -t
 flag.
